# Timer_lab

./: CMakeLists.txt  Date.cpp  Date.h  Timer.cpp  Timer.h  main.cpp  mainwindow.cpp  mainwindow.h  ui_mainwindow.h
